clusters/cl01tl/manifests/freshrss/HTTPRoute-freshrss.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: freshrss
  labels:
    app.kubernetes.io/instance: freshrss
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: freshrss
    helm.sh/chart: freshrss-5.2.1
  annotations:
    gethomepage.dev/description: FreshRSS
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Applications
    gethomepage.dev/icon: sh-freshrss-light.webp
    gethomepage.dev/name: RSS
    gethomepage.dev/podSelector: ""
    gethomepage.dev/siteMonitor: https://rss.alexlebens.dev
    gethomepage.dev/statusStyle: dot
    gethomepage.dev/weight: "250"
  namespace: freshrss
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "rss.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: freshrss
          namespace: freshrss
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
